--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,31 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
-    block contenido
+        link(rel="stylesheet", href="/css/normalize.css")
+        link(rel="stylesheet", href="/css/app.css")
+        title= nombrePagina
+    body
+        header.barra 
+            h1 UpTask - Administrador de Proyectos 
+            a(href="#") Cerrar Sesión 
+        main.contenedor 
+            aside.contenedor-proyectos 
+                .panel.crear-proyecto 
+                    a(href="/nuevo-proyecto" class="boton") Nuevo proyecto
+                        span + 
+                                                                 
+                .panel.lista-proyectos 
+                    h2 Proyectos
+                    ul#proyectos.proyectos  
+                        li
+                            a(href="#") Diseño de la tienda virtual
+                        li
+                            a(href="#") Diseño de nuevo Blog
+                        li
+                            a(href="#") Diseño de mockup     
+                        
+            block contenido
+           
+        
+
+    
