--- a/views/nuevoProyecto.pug
+++ b/views/nuevoProyecto.pug
@@ -3,3 +3,12 @@ extends layout
 block contenido 
     .contenido-principal 
         h1= nombrePagina
+            if errores
+                each error in errores  
+                    .alerta= error.texto
+        form.agregar-proyecto(action="/nuevo-proyecto" method="POST")
+            .campo 
+                label(for="nombre") Nombre proyecto: 
+                input(type="text" id="nombre" name="nombre" placeholder="Nombre del proyecto")
+            .campo.enviar   
+                input(type="submit" value="Agregar" class="boton") 
